--- a/coursera-projects/lectures/lecture14/index.html
+++ b/coursera-projects/lectures/lecture14/index.html
@@ -17,8 +17,13 @@
       <button ng-click="showNumberOfWatchers()">
         Log # of Watchers
       </button>
+      <input type="text" ng-model="name">
       <button ng-click="countOnce()">Up once Counter (once)</button>
       <button ng-click="upCounter()">Increment Counter (once)</button>
+    </div>
+    <div>
+      Once counter: {{onceCounter}} <br>
+      Regular counter: {{counter}}
     </div>
   </body>
 </html>
