--- a/coursera-projects/lectures/lecture19/index.html
+++ b/coursera-projects/lectures/lecture19/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="ShoppingListApp">
+<html ng-app="ControllerAsApp">
   <head>
     <meta charset="UTF-8" />
     <script src="angular.min.js"></script>
@@ -9,30 +9,12 @@
         font-size: 1.2em;
       }
     </style>
-    <title>ng-repeat</title>
+    <title>Controller As Syntax</title>
   </head>
   <body>
-    <h1>ng-repeat</h1>
-    <div ng-controller="ShoppingListController">
-      <!-- Shopping List #1:-->
-      <h3>Shopping List:</h3>
-      <!-- <ul>
-        <li ng-repeat="item in shoppingList1">{{ item }}</li>
-      </ul> -->
-
-      <!-- Shopping List #2: -->
-       <!-- <ul>
-        <li ng-repeat="item in shoppingList2">Buy {{ item.quantity }} of {{item.name}}(s)</li>
-      </ul> -->
-
-      <!-- Shopping List #3: -->
-      <input type="text" ng-model="shoppingList2[0].quantity">
-      <ul>
-        <li ng-repeat="item in shoppingList2">{{$index + 1 }}.Buy {{ item.quantity }} of {{item.name}}(s)</li>
-      </ul>
-      <input type="text" ng-model="newItemName" placeholder="Item name">
-      <input type="text" ng-model="newItemQuantity" placeholder="Item quantity">
-      <button ng-click="addToList()">Add To List</button>
+    <h1>Controller As Syntax</h1>
+    <div ng-controller="ParentController1">
+      <div ng-controller="ChildController1"></div>
     </div>
   </body>
 </html>
