--- a/coursera-projects/lectures/lecture19/index.html
+++ b/coursera-projects/lectures/lecture19/index.html
@@ -16,5 +16,14 @@
     <div ng-controller="ParentController1">
       <div ng-controller="ChildController1"></div>
     </div>
+
+    <div ng-controller='ParentController2 as parent'>
+      Parent value: {{ parent.value}}
+
+      <div ng-controller='ParentController2 as child'>
+        Child value: {{ child.value}}
+        Parent value: {{ parent.value}}
+      </div>
+    </div>
   </body>
 </html>
